5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4133/executions/1618_2924.log
== TEST (2019-04-02 11:21:58) 
-- CODE:
A=int(input"posicao inicial = 0")
B=int(input("velocidade = 10"))
C=int(input("intervalo de tempo = 5"))

print(A + B * C)
-- ERROR:
File "XXXX", line 1
    A=int(input"posicao inicial = 0")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:23:25) 
-- CODE:
A=int(input"posicao inicial = 0")
B=int(input("velocidade = 10"))
C=int(input("intervalo de tempo = 5"))

print(A + B * C)
-- EXECUTION TIME:
0.240857
-- ERROR:
  File "/home/codebench/codes/1618/2924/main.py", line 1
    A=int(input"posicao inicial = 0")
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
